--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,6 @@
-{% extends 'base.html' %}
-
-{% block title %}Acerca de{% endblock %}
+{% extends "base.html" %}
 
 {% block content %}
-    <h2>Sobre nosotros</h2>
-    <p>Información acerca de esta aplicación.</p>
+<h2>Acerca de</h2>
+<p>Este es un proyecto de aprendizaje de Flask. El objetivo es crear una aplicación web con formularios y validación usando Flask-WTF.</p>
 {% endblock %}
