--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,6 @@
-{% extends 'base.html' %}
-
-{% block title %}Inicio{% endblock %}
+{% extends "base.html" %}
 
 {% block content %}
-    <h2>Bienvenido a la página de inicio</h2>
-    <p>Este es el contenido de la página principal.</p>
+<h2>Bienvenido a Mi Proyecto Flask</h2>
+<p>Este es un proyecto de Flask con formularios dinámicos y validación usando Flask-WTF.</p>
 {% endblock %}
