--- a/templates/index.html
+++ b/templates/index.html
@@ -2,5 +2,5 @@
 
 {% block content %}
 <h2>Bienvenido a Mi Proyecto Flask</h2>
-<p>Este es un proyecto de Flask con formularios dinámicos y validación usando Flask-WTF.</p>
+<p>Este es un proyecto de Flask con formularios y conexión a MySQL.</p>
 {% endblock %}
