--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Acerca de</h2>
-<p>Este es un proyecto de aprendizaje de Flask. El objetivo es crear una aplicación web con formularios y validación usando Flask-WTF.</p>
+<h1>Acerca de</h1>
+<p>Esta aplicación es un sistema CRUD para la gestión de productos, desarrollado con Flask y MySQL.</p>
+<p>Permite registrar, consultar, actualizar y eliminar productos desde una interfaz web intuitiva.</p>
 {% endblock %}
