--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Bienvenido a Mi Proyecto Flask</h2>
-<p>Este es un proyecto de Flask con formularios y conexión a MySQL.</p>
+<h1>Bienvenido a la Gestión de Productos</h1>
+<p>Utiliza el menú superior para navegar por la aplicación.</p>
 {% endblock %}
