--- a/templates/formulario.html
+++ b/templates/formulario.html
@@ -1,17 +1,18 @@
-{% extends "base.html" %}
-
-{% block content %}
-<h2>Formulario de Registro</h2>
-<form method="POST">
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.nombre.label }}<br>
-        {{ form.nombre }}
-    </p>
-    <p>
-        {{ form.mail.label }}<br>
-        {{ form.mail }}
-    </p>
-    <p>{{ form.submit }}</p>
-</form>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Crear Producto</title>
+</head>
+<body>
+    <form method="POST">
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" name="nombre">
+        <label for="precio">Precio:</label>
+        <input type="text" id="precio" name="precio">
+        <label for="stock">Stock:</label>
+        <input type="number" id="stock" name="stock">
+        <button type="submit">Crear Producto</button>
+    </form>
+</body>
+</html>
