--- a/templates/resultado.html
+++ b/templates/resultado.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Resultado</h2>
-<p>El nombre ingresado es: {{ nombre }}</p>
+<h1>Resultado</h1>
+<p>{{ mensaje }}</p>
+<a href="{{ url_for('index') }}" class="btn btn-primary">Volver al Inicio</a>
 {% endblock %}
