--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -1,19 +1,25 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Lista de Usuarios Registrados</h2>
-<table border="1">
-    <tr>
-        <th>ID</th>
-        <th>Nombre</th>
-        <th>Email</th>
-    </tr>
-    {% for usuario in usuarios %}
-    <tr>
-        <td>{{ usuario.id_usuario }}</td>
-        <td>{{ usuario.nombre }}</td>
-        <td>{{ usuario.mail }}</td>
-    </tr>
-    {% endfor %}
+<h1>Lista de Usuarios</h1>
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Nombre</th>
+            <th>Correo</th>
+            <th>Rol</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for usuario in usuarios %}
+        <tr>
+            <td>{{ usuario.id }}</td>
+            <td>{{ usuario.nombre }}</td>
+            <td>{{ usuario.correo }}</td>
+            <td>{{ usuario.rol }}</td>
+        </tr>
+        {% endfor %}
+    </tbody>
 </table>
 {% endblock %}
